# Mazge

./: .gitignore  README.md  main.py  platformio.ini  pyproject.toml
doc/: architecture.md  frame_processing_pipeline.md  pinout.md  progress.md
src/: jpeg_lossless_crop.c  jpeg_lossless_crop.h  main.cpp  secrets.h.example
tools/: analyze_image.py  burst_saver.py  combined_report.py  espota_fixed.py  face_report.py  frame_stats.py  generate_report.py  grab_burst.py  haar_sizes.py  jpeg_analyze.py  ota_retry.sh  ota_upload.py  prey_analyzer.py  sim_ramp.py  test_haar.py  test_haar2.py  test_jpeg_crop.c
